# python-opentraveldata

./: .gitignore  .travis.yml  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_optd-csvwriter.py  test_optd-serving-por.py  tests-optd-csvwriter.py  tox.ini
opentraveldata/: .gitignore  LICENSE  __init__.py  csvwriter.py  opentraveldata.py
resources/: optd-publish-por.sh
